--- a/package.json
+++ b/package.json
@@ -1,11 +1,16 @@
 {
   "name": "@supersoccer/purge-marko",
-  "version": "1.0.1",
+  "version": "1.0.4",
   "main": "index.js",
   "repository": "https://github.com/supersoccer/node-purge-marko",
   "author": "hkyo89 <hkyo89@yahoo.co.jp>",
   "license": "MIT",
+  "scripts": {
+    "doc": "jsdoc -c jsdoc.json"
+  },
   "devDependencies": {
-    "chokidar": "^2.0.4"
+    "@supersoccer/minako": "*",
+    "chokidar": "^2.0.4",
+    "jsdoc": "^3.5.5"
   }
 }
